# rust-telemetry-logger

./: .gitattributes  .gitignore  Cargo.toml  Chat-1.md  Idea.md  LICENSE-APACHE  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/telemetry-core/: Cargo.toml
crates/telemetry-core/fuzz/: Cargo.toml
crates/telemetry-core/fuzz/fuzz_targets/: framer.rs
crates/telemetry-core/src/: config.rs  error.rs  filter.rs  frame.rs  framer.rs  lib.rs  pipeline.rs  protocol.rs  record.rs  ringbuf.rs  stats.rs  traits.rs  validator.rs
crates/telemetry-core/tests/: integration_pipeline.rs  proptest_framer.rs  proptest_record.rs
crates/telemetry-fw/: Cargo.toml
crates/telemetry-fw/src/: main.rs
crates/telemetry-host/: Cargo.toml
crates/telemetry-host/src/: main.rs
crates/telemetry-host/tests/: integration_pipeline.rs
crates/telemetry-host/tests/snapshots/: integration_pipeline__ndjson_seed_777.snap  integration_pipeline__table_seed_777.snap
crates/telemetry-linux/: Cargo.toml
crates/telemetry-linux/src/: main.rs
crates/telemetry-std/: Cargo.toml
crates/telemetry-std/src/: lib.rs
docs/: architecture.md  bringup.md  failure-modes.md  memory-model.md  protocol.md  yocto.md
tools/packet-generator/: Cargo.toml
tools/packet-generator/src/: main.rs
tools/telemetry-decode/: Cargo.toml
tools/telemetry-decode/src/: main.rs
