[package]
name        = "telemetry-core"
description = "no_std, heap-free telemetry pipeline logic: framer, validator, filter, ring-buffer, record, stats."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true

[features]
default = []
# Enable defmt::Format derives on public types (for on-target logging via RTT).
defmt = ["dep:defmt"]
# Expose in-memory test helpers (SimClock, CapturingStorage, FailStorage) for
# use by integration tests and by downstream crates' test suites.
# DO NOT enable in production builds.
testutils = []

[dependencies]
serde    = { workspace = true }
postcard = { workspace = true }
heapless = { workspace = true }
crc      = { workspace = true }
cobs     = { workspace = true }
defmt    = { workspace = true, optional = true }

[dev-dependencies]
proptest       = { workspace = true }
# Self-dependency with testutils feature so integration tests (tests/*.rs) can
# use the shared test helpers from traits::test_support.
telemetry-core = { path = ".", features = ["testutils"] }

[lints]
workspace = true
