[package]
name        = "telemetry-host"
description = "Host simulation binary: File/TCP/UDP packet source → telemetry-core pipeline → rotating file storage."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true

[[bin]]
name = "telemetry-host"
path = "src/main.rs"

[dependencies]
telemetry-core = { workspace = true }
telemetry-std  = { workspace = true }
clap           = { workspace = true }
heapless       = { workspace = true }

[dev-dependencies]
assert_cmd   = { workspace = true }
assert_fs    = { workspace = true }
insta        = { workspace = true }
predicates   = { workspace = true }
heapless     = { workspace = true }
serde_json   = { workspace = true }
telemetry-std  = { workspace = true }
telemetry-core = { workspace = true }

[lints]
workspace = true
